# finance-ops-copilot

./: .env.example  .gitignore  AGENTS.md  README.md  next-env.d.ts  package-lock.json  package.json  tsconfig.json
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260427_0001_initial_receipt_first_tables.py  20260427_0002_categories_mapping_rules.py  20260506_0003_audit_events_review_reasons.py
backend/app/: __init__.py  db.py  main.py
backend/app/api/: dependencies.py  routes_categories.py  routes_events.py  routes_health.py  routes_imports.py  routes_review.py  routes_summary.py
backend/app/domain/: __init__.py  enums.py  fingerprints.py  models.py  reconciliation.py
backend/app/orm/: mappers.py  (+2 more)
backend/tests/: test_alembic_migrations.py  test_api_categories.py  test_api_health.py  test_api_imports.py  test_api_review.py  test_api_schemas.py  test_api_sqlite_persistence.py  test_api_summary_export.py  test_app_repository_selection.py  test_category_schemas.py  test_db.py  test_domain_categories.py  test_domain_fingerprints.py  test_domain_reconciliation.py  test_orm_mappers.py  test_orm_models.py  test_repositories_categories.py  test_repositories_memory.py  test_repositories_sqlalchemy.py  test_review_schemas.py  test_services_audit_service.py  test_services_categorization.py  test_services_google_sheets.py  test_services_import_service.py  test_services_normalization.py  test_services_receipt_parser.py  test_services_review_service.py  test_services_statement_parser.py  test_services_summary_export.py
(+132 files in other folders)
