[project]
name = "receipt-first-finance-backend"
version = "0.1.0"
description = "Python backend for receipt-first finance ingestion and reconciliation."
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "pydantic",
  "sqlalchemy",
  "alembic",
  "python-dateutil",
  "rapidfuzz",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
